# TCC

./: .gitignore  mkdocs.yml
Latex/: Buscando em “Latex”.savedSearch
Latex/LatexABNT/: CFG_BetterBibTeX-preferences.json
Latex/SBS_SBGames/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=D  index.html?C=S;O=A  sbc-template.aux  (+5 more)
LattesAutomation/: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  LattesCurriculos.md  PROJECT.md  README.md  TODO.md  pyproject.toml  requirements.txt
LattesAutomation/config/: config.yaml  selectors.yaml
LattesAutomation/data/exported/: tccs.csv
LattesAutomation/docs/: BibliotecaFURB.md  EspecificacaoFuncional.md  EstruturaCSV.md  Fluxo.md  Lattes.md  Seletores.md
LattesAutomation/src/lattes_automation/: __init__.py  browser.py  collector.py  config.py  csv_service.py  extraction.py  lattes.py  lattes_import.py  lattes_xml.py  logging.py  main.py  models.py  validation.py
LattesAutomation/src/lattesautomation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
LattesAutomation/tests/: test_collector.py  test_csv_service.py  test_extraction.py  test_lattes_import.py  test_lattes_xml.py  test_validation.py
Prompts/: Prompt_Codex_ExplicarCodigo.md  Prompt_Codex_RevisarCodigo.md  Prompt_NotebookLM_AudioLivroLongo.md  Prompt_Revisao_ABNT_LaTeX.md  Prompt_Revisao_CitacaoReferencia.md  Prompt_Revisao_PalavraDicionario.md  Prompt_TextoCientifico.md  Prompt_TextoCientifico_Traducao.md
_revisados/: NathanGabrielPiran_2025-12-11_20-00.docx
docs/: README.md  index.html
(+88 files in other folders)
