[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lattesautomation"
version = "0.1.0"
description = "Coleta TCCs da Biblioteca da FURB e auxilia o preenchimento do Lattes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "loguru>=0.7",
    "playwright>=1.49",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
lattes-automation = "lattes_automation.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lattes_automation = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["lattes_automation"]
